app/styles/homepage.scss
#homepage-counter-row {
  height: 200px;
  margin-bottom: 50px;
  background-image: url("../images/main-introduction-bg.png");
  background-repeat: no-repeat;
  background-position: 100% 4px;
  padding: 10px
}

.main-introduction {
  margin-left: 250px;
  padding-left: 20px;
  padding-right: 20px;
  margin-right: 20px;
  height: 164px;
  border-top: 3px solid #B71C3D;
  border-bottom: 3px solid #B71C3D;
}

.main-counterdown-container {
  float: left;
  margin-top: -24px;
  width: 250px;
}

.homepage-counter-graph {
    width: 30%;
    float: left;
}

.homepage-counter-text {
    width: 70%;
    float: left;
}

.mission-row {
    position: relative;
    width: 96%;
    padding-top: 3em;
    margin-left: 2%;
    margin-right: 2%;
}

#mission-major {
    position: relative;
    width: 100%;
}

.mission-button {
    top: 390px;
    width: 12%;
    margin-bottom: 30px;
}

#mission-button-tsa {
    position: absolute;
    left: 85px;
}

#mission-button-wu {
    position: absolute;
    left: 281px;
}

#mission-button-lin {
    position: absolute;
    left: 480px;
}

.other-area  {
  position: absolute;
  width: 90px;
  margin-top: -120px;
}

.other-area > img {
  width: 100%;
}

.volunteer {
  left: 645px;
}

.stuff {
  left: 740px;
}

.fb-like {
  width: 1000px;
  text-align: right;
  margin: auto;
  margin-top: 10px;
}

.fb-like > iframe {
  margin-right: 10px;
}

.mission-link {
  display: inline-block;
  position: absolute;
  width: 180px;
  height: 400px;
  top: 100px;
}

.mission-link-1 {
  left: 40px;
}

.mission-link-2 {
  left: 240px;
}

.mission-link-3 {
  left: 440px;
}

